--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages='*'
-spring.kafka.template.default-topic="email-send-topic"
+kafka.template.default-topic="email-send-topic"
 
 ##==========Email properties===================================
 spring.mail.host=smtp.gmail.com
@@ -25,6 +25,11 @@ spring.mail.username=application@gmail.com
 spring.mail.password=application password
 spring.mail.properties.smtp.auth=true
 spring.mail.properties.smtp.starttls.enable=true
+
+email.subject="Email address confirmation"
+email.text="To confirm your email, please follow the link: "
+#change to actual url
+email.confirmation.url="http://localhost:8080/account/confirm-email?token="
 
 
 
