add email HTML template + refactoring

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,7 @@ spring.mail.properties.smtp.auth=true
 spring.mail.properties.smtp.starttls.enable=true
 
 email.subject="Email address confirmation"
-email.text="To confirm your email, please follow the link: "
+email.encoding="UTF-8"
 #change to actual url
 email.confirmation.url="http://localhost:8080/account/confirm-email?token="
 
