--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=email-service
-spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.hibernate.ddl-auto=validate
+spring.liquibase.enabled=true
+spring.liquibase.change-log=db/changelog/changelog-master.xml
 
 #==========Database properties===================================
 spring.datasource.driver-class-name=org.postgresql.Driver
